# Copyright 2021 Gnosis Ltd.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "txpool"
version = "1.0.0-alpha"
authors = ["Dragan Rakita <dragan0rakita@gmail.com","Karim Agha <karim.agha@gnosis.io>"]
edition = "2018"
description = "Generic transaction pool."


[dependencies]
log = "0.4"
smallvec = "0.6"
trace-time = "0.1"


[dev-dependencies]
ethereum-types = { version = "0.14.0", features = ["rlp"]}
