[package]
description = "OpenEthereum Miner Interface."
name = "ethcore-miner"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
version = "1.12.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
# Only work_notify, consider a separate crate
ethash = { path = "../../concensus/ethash", optional = true }
fetch = { path = "../../net/fetch", optional = true }
hyper = { version = "0.12", optional = true }
url = { version = "2", optional = true }

# Miner
ansi_term = "0.10"
common-types = { path = "../../ethcore/types" }
error-chain = "0.12"
ethabi = { git = "https://github.com/surfingnerd/ethabi", rev="beb208bf24df9c3d7639fa661e6a1ac87dee7886"  } 
ethabi-derive = { git = "https://github.com/surfingnerd/ethabi", rev="beb208bf24df9c3d7639fa661e6a1ac87dee7886"  }
ethabi-contract = { git = "https://github.com/surfingnerd/ethabi", rev="beb208bf24df9c3d7639fa661e6a1ac87dee7886"  }
ethcore-call-contract = { path = "../../vm/call-contract" }
ethereum-types = { version = "0.14.1", features = [ "rlp" ] }
futures = "0.1"
keccak-hash = "0.10.0"
linked-hash-map = "0.5"
log = "0.4"
parity-crypto = { path="../../parity-crypto", features = ["publickey"] }
parity-runtime = { path = "../../runtime/runtime" }
parity-util-mem = "0.7"
parking_lot = "0.11.1"
price-info = { path = "./price-info", optional = true }
 rlp = { version = "0.5.2" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
trace-time = "0.1"
txpool = { path = "../../transaction-pool" }

[dev-dependencies]
env_logger = "0.5"
ethkey = { path = "../../accounts/ethkey" }
rustc-hex = "1.0"

[features]
work-notify = ["ethash", "fetch", "hyper", "url"]
