[package]
name = "patricia-trie-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
trie-db = "0.11.0"
keccak-hasher = { version = "0.1.1", path = "../../util/keccak-hasher" }
hash-db = "0.11.0"
 rlp = { version = "0.5.2" }
parity-bytes = "0.1"
ethereum-types = { version = "0.14.0", default-features = false }
elastic-array = "0.10"

[dev-dependencies]
memory-db = "0.11.0"
keccak-hash = "0.5.0"
journaldb = { path = "../journaldb" }
