[package]
description = "HTTP/HTTPS fetching library"
homepage = "https://github.com/openethereum/openethereum"
license = "GPL-3.0"
name = "fetch"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
hyper = "~0.12.9"
hyper-rustls = "0.16.0"
http = "0.1"
log = "0.4"
tokio = "1.21"
url = "2"
bytes = "0.4"

[features]
default = []
