[package]
description = "Virtual Machines (VM) Support Library"
name = "vm"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
parity-bytes = "0.1"
ethereum-types = { version = "0.14.0", features = [ "rlp" ] }
patricia-trie-ethereum = { path = "../../db/patricia-trie-ethereum" }
ethjson = { path = "../../ethjson" }
 rlp = { version = "0.5.2" }
keccak-hash = "0.10.0"
